--- a/app/templates/example1.html
+++ b/app/templates/example1.html
@@ -9,6 +9,7 @@
       <p>Send test email to: <input type="text" name="email" value="{{ email }}"></p>
       <input type="submit" name="submit" value="Send">
       <input type="submit" name="submit" value="Send in 1 minute">
+        <input type="submit" name="submit" value="dummy">
     </form>
 
 {% endblock body %}
